crates/trust-cg-test/tests/snapshots/cli__ratchet_schema_help.snap
---
source: crates/trust-cg-test/tests/cli.rs
expression: "help_of(&[\"ratchet\", \"schema\"])"
---
Assert the committed result schemas match the Rust types.

Regenerates the expected schemars output for the initial result-schema types and compares it with
the JSON committed under `evals/schema/`.

# Examples

  trust-cg-test ratchet schema
  trust-cg-test ratchet schema --format json

Usage: trust-cg-test ratchet schema [OPTIONS]

Options:
  -f, --format <FORMAT>
          Output format (human, json, junit)

          Possible values:
          - human: Pretty table + narrative, targeted at humans
          - json:  Machine-readable JSON
          - junit: JUnit XML for CI consumers

          [default: human]

      --write
          Write missing or changed schemas instead of failing the ratchet

  -o, --out <PATH>
          Override the command-specific output file or directory.

          See the selected subcommand's help for its output type and default.

      --timeout <SECS>
          Per-unit timeout in seconds. Subcommands may apply per-unit defaults when this is unset

      --parallel <N>
          Worker count (honors cargo-serialization lock). Default: auto

  -q, --quiet
          Suppress progress bars; errors still go to stderr

  -v, --verbose...
          Show debug-level events. Repeat for more: -vv, -vvv

      --no-cache
          Ignore proof / corpus caches

      --dry-run
          Print what would run without executing external tools

  -h, --help
          Print help (see a summary with '-h')
