crates/trust-cg-test/tests/snapshots/cli__ratchet_shell_isolation_help.snap
---
source: crates/trust-cg-test/tests/cli.rs
expression: "help_of(&[\"ratchet\", \"shell-isolation\"])"
---
Enforce the process-spawn boundary for `trust-cg-test`.

Scans `crates/trust-cg-test/src` and fails if `std::process::Command`, `Command::new`, or
`process::Command` appears outside `shell.rs`, `external.rs`, or this ratchet implementation.

# Examples

  trust-cg-test ratchet shell-isolation
  trust-cg-test ratchet shell-isolation --format json

Usage: trust-cg-test ratchet shell-isolation [OPTIONS]

Options:
  -f, --format <FORMAT>
          Output format (human, json, junit)

          Possible values:
          - human: Pretty table + narrative, targeted at humans
          - json:  Machine-readable JSON
          - junit: JUnit XML for CI consumers

          [default: human]

  -o, --out <PATH>
          Override the command-specific output file or directory.

          See the selected subcommand's help for its output type and default.

      --timeout <SECS>
          Per-unit timeout in seconds. Subcommands may apply per-unit defaults when this is unset

      --parallel <N>
          Worker count (honors cargo-serialization lock). Default: auto

  -q, --quiet
          Suppress progress bars; errors still go to stderr

  -v, --verbose...
          Show debug-level events. Repeat for more: -vv, -vvv

      --no-cache
          Ignore proof / corpus caches

      --dry-run
          Print what would run without executing external tools

  -h, --help
          Print help (see a summary with '-h')
