crates/trust-cg-test/tests/snapshots/cli__ratchet_unwrap_help.snap
---
source: crates/trust-cg-test/tests/cli.rs
expression: "help_of(&[\"ratchet\", \"unwrap\"])"
---
Monotonic panic-family ratchet for production Rust sources.

Regenerates the production `.unwrap()` / `.expect(` / `panic!` / `unreachable!` / `todo!` site
counts and fails when any checked count exceeds `ratchet/unwrap_baseline.json`.

# Examples

  trust-cg-test ratchet unwrap
  trust-cg-test ratchet unwrap --format json

Usage: trust-cg-test ratchet unwrap [OPTIONS]

Options:
  -f, --format <FORMAT>
          Output format (human, json, junit)

          Possible values:
          - human: Pretty table + narrative, targeted at humans
          - json:  Machine-readable JSON
          - junit: JUnit XML for CI consumers

          [default: human]

  -o, --out <PATH>
          Override the command-specific output file or directory.

          See the selected subcommand's help for its output type and default.

      --timeout <SECS>
          Per-unit timeout in seconds. Subcommands may apply per-unit defaults when this is unset

      --parallel <N>
          Worker count (honors cargo-serialization lock). Default: auto

  -q, --quiet
          Suppress progress bars; errors still go to stderr

  -v, --verbose...
          Show debug-level events. Repeat for more: -vv, -vvv

      --no-cache
          Ignore proof / corpus caches

      --dry-run
          Print what would run without executing external tools

  -h, --help
          Print help (see a summary with '-h')
