crates/trust-cg-test/tests/snapshots/cli__rustc_help.snap
---
source: crates/trust-cg-test/tests/cli.rs
expression: "help_of(&[\"rustc\"])"
---
Drive `rustc_codegen_trust_cg` + rustc UI tests (WS4).

`rustc smoke` sanity-compiles `hello.rs`. `rustc ui` runs the full UI harness and writes a per-test
JSON record. `rustc feature-coverage` reports which rustc-MIR opcodes the adapter currently
translates.

# Examples

  trust-cg-test rustc smoke
  trust-cg-test rustc ui --format json --out evals/results/rustc/2026-04-19.json
  trust-cg-test rustc feature-coverage --format human

Usage: trust-cg-test rustc [OPTIONS] <COMMAND>

Commands:
  smoke             Compile and run a trivial hello-world via Trust Codegen
  ui                Run the full rustc UI harness against Trust Codegen
  feature-coverage  Print rustc-MIR opcode coverage of the `trust-ir-from-rustc-mir` adapter
  help              Print this message or the help of the given subcommand(s)

Options:
  -f, --format <FORMAT>
          Output format (human, json, junit)

          Possible values:
          - human: Pretty table + narrative, targeted at humans
          - json:  Machine-readable JSON
          - junit: JUnit XML for CI consumers

          [default: human]

  -o, --out <PATH>
          Override the command-specific output file or directory.

          See the selected subcommand's help for its output type and default.

      --timeout <SECS>
          Per-unit timeout in seconds. Subcommands may apply per-unit defaults when this is unset

      --parallel <N>
          Worker count (honors cargo-serialization lock). Default: auto

  -q, --quiet
          Suppress progress bars; errors still go to stderr

  -v, --verbose...
          Show debug-level events. Repeat for more: -vv, -vvv

      --no-cache
          Ignore proof / corpus caches

      --dry-run
          Print what would run without executing external tools

  -h, --help
          Print help (see a summary with '-h')
