crates/trust-cg-test/tests/snapshots/cli__rustc_ui_help.snap
---
source: crates/trust-cg-test/tests/cli.rs
expression: "help_of(&[\"rustc\", \"ui\"])"
---
Run the full rustc UI harness against Trust Codegen.

Drives rustc's UI test corpus through `rustc_codegen_trust_cg`, records per-test outcomes, and
writes the WS4 compatibility result artifact.

# Examples

  trust-cg-test rustc ui
  trust-cg-test rustc ui --format json
  trust-cg-test rustc ui --out evals/results/rustc/ui/2026-04-19.json

Usage: trust-cg-test rustc ui [OPTIONS]

Options:
  -f, --format <FORMAT>
          Output format (human, json, junit)

          Possible values:
          - human: Pretty table + narrative, targeted at humans
          - json:  Machine-readable JSON
          - junit: JUnit XML for CI consumers

          [default: human]

  -o, --out <PATH>
          Override the command-specific output file or directory.

          See the selected subcommand's help for its output type and default.

      --timeout <SECS>
          Per-unit timeout in seconds. Subcommands may apply per-unit defaults when this is unset

      --parallel <N>
          Worker count (honors cargo-serialization lock). Default: auto

  -q, --quiet
          Suppress progress bars; errors still go to stderr

  -v, --verbose...
          Show debug-level events. Repeat for more: -vv, -vvv

      --no-cache
          Ignore proof / corpus caches

      --dry-run
          Print what would run without executing external tools

  -h, --help
          Print help (see a summary with '-h')
